fixed broken links

--- a/week08.html
+++ b/week08.html
@@ -199,7 +199,7 @@ However, the question is why this trend is apparent here in Austin. The huge cus
 <p>AI was one of the biggest themes at SXSW 2018. To my surprise, a good portion of the talks focus on the ethical issues of AI. Gender and race equality is a frequently discussed topic. One rule of thumb is to train AI with unbiased data. I’m glad to see how the people shaping the future of AI are putting a lot of thought and effort into the ethical side of the technology.</p>
 <p>It also leads me to think: can card-only payments be a form of discrimination for lower income populations? How can we include everyone while moving together into the age of a cashless society? There is also the big question of: is convenience always a good thing? What if payments are so convenient, people no longer take the time to think about budgeting and make people prone to debt?</p>
 
-<span class="image fit"><img src="images/w08_chilantro_cashless.jpg" alt="Chilantro, a Cashless foodtruck." /></span>
+<span class="image fit"><img src="images/w08_chilantro_cashless.JPG" alt="Chilantro, a Cashless foodtruck." /></span>
 <!-- 	<section class="wrapper style1 align-center">
 		<div class="inner">
 			<p>Nika's photo gallery</p>
