fixed broken links

--- a/week08.html
+++ b/week08.html
@@ -199,7 +199,8 @@ However, the question is why this trend is apparent here in Austin. The huge cus
 <p>AI was one of the biggest themes at SXSW 2018. To my surprise, a good portion of the talks focus on the ethical issues of AI. Gender and race equality is a frequently discussed topic. One rule of thumb is to train AI with unbiased data. I’m glad to see how the people shaping the future of AI are putting a lot of thought and effort into the ethical side of the technology.</p>
 <p>It also leads me to think: can card-only payments be a form of discrimination for lower income populations? How can we include everyone while moving together into the age of a cashless society? There is also the big question of: is convenience always a good thing? What if payments are so convenient, people no longer take the time to think about budgeting and make people prone to debt?</p>
 
-<span class="image fit"><img src="images/w08_chilantro_cashless.JPG" alt="Chilantro, a Cashless foodtruck." /></span>
+<span class="image fit"><img src="images/w08_chilantro_cashless.JPG" alt="Chilantro, a Cashless foodtruck."/></span>
+
 <!-- 	<section class="wrapper style1 align-center">
 		<div class="inner">
 			<p>Nika's photo gallery</p>
@@ -279,7 +280,7 @@ SCOTT
 <p>However, the QR code still rules. Huawei, Xiaomi, OPPO, and Vivo comprise 66% of the smartphone market in China. Street food vendors or grocery owners or his example of a 76 year old laborer - all have QR codes. Laborer used to carry tons of coins but for 50 cents, they can have a high quality print out and delivered lanyard with a laminated QR code of their account. Many poor and rural laborers benefit from this ease of payment and it opens up new avenues of work to them.</p>
 <p>There was no discussion of the security concerns about these technologies, naturally, but Leung was very proud of what they’ve made, and are working on for the future.  He left with the conclusion that designers now have a broader mandate to affect positive change in business and social responsibility, and was happy to share Chinese innovate across cultures in Europe, the US, and here at SXSW.</p>
 
-<span class="image fit"><img src="images/w08_wearecashless.jpg" alt="A cashless food truck in Austin." /></span>
+<span class="image fit"><img src="images/w08_wearecashless.JPG" alt="A cashless food truck in Austin."/></span>
 
 <p>One last interesting tidbit was a trip to the Whole Foods HQ. They have a number of Amazon lockers, much like many other locations around the US, but they also have refridgerated lockers that allow you to order food online and come pick up perishables in the store at your convenience.</p>
 
