--- a/week08.html
+++ b/week08.html
@@ -27,7 +27,11 @@
 
 <span class="image fit"><img src="images/w08_MCatSXSW_banner.jpg" alt="The Mastercard display at the Four Seasons at SXSW." /></span>
 
-<p>Every year, for 10 days in the middle of March, over 400,000 people descend upon Austin, Texas to attend the thousands of varied events, talks, and festivals that combine to form South by Southwest (SXSW).</p>
+<p>Every year, for 10 days in the middle of March, over 400,000 people descend upon Austin, Texas to attend the thousands of varied events, talks, and festivals that combine to form South by Southwest (SXSW). </p>
+
+  <p>
+    Our team had a blast. Since there was so much to talk about, we decided to break the post up to share our own unique perspectives. We decided to chunk our thoughts and findings into three categories: What we experienced during SXSW that better informed our Capstone project, our favorite thing that week, and what we found most surprising. 
+  </p>
 <!--
 
 ZOHAIB
@@ -37,10 +41,8 @@ ZOHAIB
 
 <h3>Best MC takeaway</h3><p>Capital One’s ‘How Can I Control My Credit Card Footprint?’</p>
 
-<p>As part of our Capstone research, we attended several talks to get a sense of what other financial industry players are working on.</p>
-<p>I attended one hosted by Capital One: ‘How Can I Control My Credit Card Footprint?’. It was essentially a pitch for an innovative new product Capital One has developed.</p>
-<p>A year ago, they released an SMS chatbot they called Eno (One backwards), that consumers could text to ask simple questions like what their current bank balance is.</p>
-<p>They’re now leveraging Eno and taking it a step further. They started with the premise: Why do we always have to give our one credit card number, with all its privileges, to every single merchant out there? </p>
+<p>As part of our Capstone research, we attended several talks to get a sense of what other financial industry players are working on.I attended one hosted by Capital One: ‘How Can I Control My Credit Card Footprint?’. It was essentially a pitch for an innovative new product Capital One has developed.</p>
+<p>A year ago, they released an SMS chatbot they called Eno (One backwards), that consumers could text to ask simple questions like what their current bank balance is. They’re now leveraging Eno and taking it a step further. They started with the premise: Why do we always have to give our one credit card number, with all its privileges, to every single merchant out there? </p>
 
 <p>Their new product is a browser extension that recognizes when you’re on a checkout page. If you haven’t shopped with that merchant before, Eno will create a virtual card number specifically for that merchant. The next time you visit the same online store, Eno will auto-populate your financial information. The virtual credit cards are different for each merchant. </p>
 <p>Therefore, if a credit card number is compromised, the setback to the consumer is minimized, since they can just deactivate that single number tied to that merchant. </p>
@@ -113,7 +115,7 @@ NIKA
 <h2>Nika</h2>
 
 <h3>Best MC takeaway</h3>
-<p>“We don’t take cash”</p>
+<p>Food Trucks: “We don’t take cash”</p>
 <p>While walking up to grab some mouth watering food from Chi’lantro, one of Austin’s most famous food trucks, a sign caught my eye: “Chi’Lantro does not accept cash”. Chi’lantro isn’t an exception. All of the food trucks near SXSW accept cards, and a large percentage don’t accept cash. This is very different from our observations in the past, where small businesses prefer cash to avoid additional costs.</p>
 <p>Speed and safety are the main reasons for this cashless policy. Accepting cards saves the trouble of counting cash and finding change, and significantly lowering the risk of theft.
 However, the question is why this trend is apparent here in Austin. The huge customer volume at downtown Austin where there are events constantly going on is perhaps one factor. The cost of processing fees and hardware investment is negligible comparing to the loss of customers due to longer wait times.</p>
@@ -192,12 +194,12 @@ SCOTT
 <p>Just one hour before his talk, John Maeda gave his Design in Tech Report 2018. Leung prefaced his talk with a quote from Maeda’s talk, "Chinese design and tech principles are leading the world but often overlooked". Beyond Cashless Cities, Leung really spoke as an ambassador for Chinese designers and what innovations they’re pushing in their own way.</p>
 <p>Leung framed his talk in a timeline of his life in comparison to the US and China GDP.</p>
 	<ul>
-		<li>1977 - born, China's GDP was 8% of the US, "Blue Ants" were Chinese workers, same blue garb, all the same - two hundred years ago China was 1/3 of global GDP</li>
+		<li>1977 - born, China's GDP was 8% of the US. Chinese workers were known as "Blue Ants", all wearing the same blue garb, all living the same way. Two hundred years ago, China was 1/3 of the global GDP at the time.</li>
 		<li>1995 - China was 10% of US GDP</li>
-		<li>2017 - Now China is 65% of the US GDP (some predictions are that it'll overtake US in next 15 years) 6200% growth in last 15 years</li>
+		<li>2017 - Now China is 65% of the US GDP (some predictions are that it'll overtake US in next 15 years). 6200% growth in last 15 years</li>
 	</ul>
-<p>What does the Cashless City mean? Wherever you go in China, you just use your mobile phone or another device. He only touches his wallet in China when he needs to take out his ID. In Austin, everyday he is reaching for his wallet to pay for things. In China at the hospital, on bus, paying for parking, groceries, transit, it's the norm to only use phone.</p>
-<p>However, he highlight many of the social issues that are creeping up in China, namely extreme pollution and rural areas being left behind economically. Instead of focusing on the reasons why China has adopted QR codes on the phone for many digital transactions, Leung focused on a few projects his group has made to help assuage these. He focused on how designers need to be business oriented - what broader impact can we bring to society? What can we do as designers for social responsibility?</p>
+<p>What does the Cashless City mean? Wherever you go in China, you just use your mobile phone or another device. He only touches his wallet in China when he needs to take out his ID. In Austin, everyday he is reaching for his wallet to pay for things. In China at the hospital, on the bus, paying for parking, groceries, transit, it's the norm to only use your phone.</p>
+<p>However, he highlighted many of the social issues that are creeping up in China, namely extreme pollution and rural areas being left behind economically. Instead of focusing on the reasons why China has adopted QR codes on the phone for many digital transactions, Leung focused on a few projects his group has made to help assuage these. He focused on how designers need to be business oriented - what broader impact can we bring to society? What can we do as designers for social responsibility?</p>
 
 <strong>Some Examples</strong>
 
