Adding weeknotes 6,7 and 9 to the blog

--- a/index.html
+++ b/index.html
@@ -104,8 +104,22 @@
 						</div>
 					</section>
 
+					<!-- Six and Seven -->
+					<section class="spotlight style1 orient-left content-align-left image-position-center onscroll-image-fade-in" id="first">
+						<div class="content">
+							<h2>Weeknotes 6 and 7 - Week three in the four week plan</h2>
+							<p>This week we finally began conducting interviews. Interviews are invaluable because we get to hear about goals, problems and opinions in the users’ own words.</p>
+							<ul class="actions vertical">
+								<li><a href="week06.html" class="button">Read More</a></li>
+							</ul>
+						</div>
+						<div class="image">
+							<img src="images/w07_affinity_pink.JPG" alt="Building the Affinity" />
+						</div>
+					</section>
+
 				<!-- Eight -->
-					<section class="spotlight style1 orient-left content-align-left image-position-center onscroll-image-fade-in">
+					<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in">
 						<div class="content">
 							<h2>Weeknotes 8 - The Team Goes to Austin, TX for SXSW</h2>
 							<p>Every year, for 10 days in the middle of March, over 400,000 people descend upon Austin, Texas to attend the thousands of varied events, talks, and festivals that combine to form South by Southwest (SXSW). Here's what we got out of it...</p>
@@ -115,6 +129,20 @@
 						</div>
 						<div class="image">
 							<img src="images/w08_MCatSXSW_banner.jpg" alt="" />
+						</div>
+					</section>
+
+					<!-- Nine -->
+					<section class="spotlight style1 orient-left content-align-left image-position-center onscroll-image-fade-in" id="first">
+						<div class="content">
+							<h2>Weeknotes 9 - End of Discovery Phase</h2>
+							<p>This post outlines the full discovery phase and follows closely our presentation with the client on March 23rd.</p>
+							<ul class="actions vertical">
+								<li><a href="week09.html" class="button">Read More</a></li>
+							</ul>
+						</div>
+						<div class="image">
+							<img src="images/InsightMatrix.png" alt="Building the Affinity" />
 						</div>
 					</section>
 
