Fixing broken images in weeknotes5

--- a/week05.html
+++ b/week05.html
@@ -27,7 +27,7 @@
 
 								<p>This week we shift to the theme of identity, privacy and sharing. With the access to research resources at CMU we were able to reach out to researchers and professors from the CMU CyLab (CyLab Security and Privacy Institute). Specifically, we contacted experts in the areas of cybersecurity, blockchain, privacy, and usability.</p>
 
-								<span class="image fit"><img src="images/w05_burning_candle_small.jpg" alt="Burning the candle from both ends" /></span>
+								<span class="image fit"><img src="images/w05_burning_candle_small.JPG" alt="Burning the candle from both ends" /></span>
 
 								<b>Three big hypotheses that we are trying to answer are:</b>
 								<ul>
@@ -44,7 +44,7 @@
 								</ul>
 
 								<!-- <add more insights?> -->
-								<span class="image fit"><img src="images/w05_scrum_board_01.jpg" alt="Z and A at scrum board" /></span>
+								<span class="image fit"><img src="images/w05_scrum_board_01.JPG" alt="Z and A at scrum board" /></span>
 
 								<!-- <insert selfie app prototypes here> -->
 
@@ -60,7 +60,7 @@
 								<b>Physical Scrum board:</b>
 								<p>The web Trello board hasn’t been working very well for our team. Instead, we made a physical Trello board and put it up on the office wall so that we can easily refer to it and update any time during the meetings.</p>
 
-								<span class="image fit"><img src="images/w05_scrum_board_02.jpg" alt="Z and A at scrum board" /></span>
+								<span class="image fit"><img src="images/w05_scrum_board_02.JPG" alt="Z and A at scrum board" /></span>
 
 
 								<b>Sub-team meetings:</b>
