Fixing upside down image in weeknotes5

--- a/week05.html
+++ b/week05.html
@@ -44,7 +44,7 @@
 								</ul>
 
 								<!-- <add more insights?> -->
-								<span class="image fit"><img src="images/w05_scrum_board_01.JPG" alt="Z and A at scrum board" /></span>
+								<span class="image fit"><img style="transform: rotate(180deg);" src="images/w05_scrum_board_01.JPG" alt="Z and A at scrum board" /></span>
 
 								<!-- <insert selfie app prototypes here> -->
 
