Removing garbage text

--- a/week09.html
+++ b/week09.html
@@ -68,7 +68,7 @@
 
 
 
-<span class="image fit"><img src="images/InsightMatrix.png" alt="Insight matrix" /></span>insight_final
+<span class="image fit"><img src="images/InsightMatrix.png" alt="Insight matrix" /></span>
 
 
 
