--- a/index.html
+++ b/index.html
@@ -146,6 +146,20 @@
 						</div>
 					</section>
 
+					<!-- Ten and Eleven -->
+					<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in" id="first">
+						<div class="content">
+							<h2>Weeknotes 10 - Start Sprinting</h2>
+							<p>After our End of Discovery Presentation, we had lots of client feedback and suggestions for where to go next. This week marked the start of our first Design Sprint of the semester. We are trying to follow the Google Ventures Sprint methodology, but stretching the sprint over two weeks instead of one.</p>
+							<ul class="actions vertical">
+								<li><a href="week10.html" class="button">Read More</a></li>
+							</ul>
+						</div>
+						<div class="image">
+							<img src="images/w10_crazy8s.jpg" alt="Design Sprint - Crazy 8s" />
+						</div>
+					</section>
+
 					<!--<section class="wrapper style1 align-center">
 						<div class="inner">
 							<h2>Another Future Weeknotes</h2>
