Adding assets to blog

--- a/week10.html
+++ b/week10.html
@@ -140,8 +140,11 @@ We opted to meet on Sunday with a more refined storyboard, picking our individua
 <li>A series of animations/gifs that show what data is collected while asking/educating.</li>
 </ul>
 
-[ .mp4 animation of the MC logo ] (as a break image between the two protos)
-
+<video width="100%" controls>
+  <source src="images/MC_sliding.mp4" type="video/mp4">
+  <source src="images/MC_sliding.mp4" type="video/ogg">
+  Your browser does not support HTML5 video.
+</video>
 
 <hr>
 
