adding remaining assets to post 10 - blog

--- a/week10.html
+++ b/week10.html
@@ -56,7 +56,7 @@
 
 <p>We did individual brainstorming and sketching, and this immediately uncovered some different ideas among the team. We had tons of questions around continuous authentication and biometric data. Where is the data stored? Where is the interaction taking place - on the customer’s device or the merchants? </p>
 
-<span class="image fit"><img src="images/w10_ExperienceMap.png" alt="Affinity Diagram" /></span>
+<span class="image fit"><img src="images/w10_ExperienceMap.png" alt="Experience Map" /></span>
 
 
 
@@ -64,30 +64,35 @@
 
 <p>What if the authentication method lives on a customers device, and they don’t have to re-swipe their card from one store to the next? </p>
 
-[ photo from Wednesday’s sketching session ] 
+<span class="image fit"><img src="images/wedsketch.jpg" alt="photo from Wednesday’s sketching session" /></span>
+
 
 
 <p>We broke down the problem space into a 2x2 matrix of Physical, Digital vs. Merchant, Customer. Each teammate sketched a short storyboard for each combination of these. This framework helped satisfy various ideas people wanted to express, and in the end we realized more were alike than different.</p>
 
-<span class="image fit"><img src="images/w10_DesignSpaces.png" alt="Affinity Diagram" /></span>
+<span class="image fit"><img src="images/w10_DesignSpaces.png" alt="Design Spaces" /></span>
 
 
 
 <p>Friday we shared more sketches and storyboards with each other and asked more questions about how continuous authentication actually works and which solutions may be viable.. Many solutions revolved around similar design solutions and we realized that the division between merchant and customers is a bit false - all solutions included both as two sides of the same coin.</p> 
 
-<span class="image fit"><img src="images/w10_WhereHappening.png" alt="Affinity Diagram" /></span>
- 
+ <span class="image fit"><img src="images/w10_WhereHappening.png" alt="Where Happening" /></span>
+
 
 <p>This chart above shows a mark for each person’s storyboard and where the authentication experience is taking place. It took a lot of discussing around this to figure out various methods we came up with, but it seems we have lots of interesting design concepts we will have to pare down and run with next week.</p>
 
+
 <h4>Week Two</h4>
 
-<span class="image fit"><img src="images/w10_crazy8s.jpg" alt="Affinity Diagram" /></span>
+<span class="image fit"><img src="images/w10_crazy8s.jpg" alt="Cray 8s" /></span>
 
 <p>Since we spent a fair portion of the first week figuring out how the design sprint is going to work and chewing over the client feedback, we still had lots of ideas and hadn’t narrowed down the scope by the end of the week! By the end of the first Friday we each had a couple storyboards for ideas we would like to pursue. The only thread was that it had to probe the research question of “How much personal information do people really want to see if it’s being collected in a Continuous Authentication scenario?”</p>
 
 <p>Everybody had one storyboard surrounding a digital shopping experience and a physical one. 
 We opted to meet on Sunday with a more refined storyboard, picking our individual favorites to develop and share. Then Monday we had one more last sprint - Crazy Eights! With this exercise, you have 2 minutes each to develop a sketch around your storyboard and then move on to the next one. It’s a fast way to get lots of ideas on paper quickly.</p>
+
+<span class="image fit"><img src="images/allstoryboards.jpg" alt="All of our storyboards" /></span>
+
 
 <p>After a quick round of sharing, we pinned up on the board and voted. Everyone gets 3 votes, and Aroon, being the “Decider” for the week, gets a super-vote. In the end we decided on a two pronged focus - one series of prototypes were smaller and focused on UI elements in a typical digital payments online scenario that would let the user know continuous data collection is enabling them to pay faster. The second was a more speculative exploration of how people may opt-in to a continuous authentication program in a physical store. The ideas around it involved microgames, waiting in line, and personal avatars. The ideas weren’t really focused but we felt there was enough interest there to pursue.</p> 
 
@@ -173,8 +178,8 @@ We opted to meet on Sunday with a more refined storyboard, picking our individua
 
 <b>Testing</b>
 
-[ Testing photos if these exist ]
 
+<span class="image fit"><img src="images/usertest.jpg" alt="User Testing" /></span>
 
 <p>We spent Thursday getting two think-alouds each. The think-alouds ended up being great ways to get immediate reactions to both of these prototypes. The results were quickly helpful and helped us build upon the scenarios we develop to present to the client. The end-of-week client presentation went well and the prototypes allowed them to give direct feedback on our direction.</p>
 
