title change for wk10

--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
 					<!-- Ten and Eleven -->
 					<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in" id="first">
 						<div class="content">
-							<h2>Weeknotes 10 - Start Sprinting</h2>
+							<h2>Weeknotes 10 and 11 - Start Sprinting</h2>
 							<p>After our End of Discovery Presentation, we had lots of client feedback and suggestions for where to go next. This week marked the start of our first Design Sprint of the semester. We are trying to follow the Google Ventures Sprint methodology, but stretching the sprint over two weeks instead of one.</p>
 							<ul class="actions vertical">
 								<li><a href="week10.html" class="button">Read More</a></li>
