Added content and rearranged pics

--- a/week10.html
+++ b/week10.html
@@ -167,13 +167,11 @@ We opted to meet on Sunday with a more refined storyboard, picking our individua
 <b>Concept</b>
 <p>Use personalised avatars to provide a secure and familiar way to collect users’ biometric information.</p>
 
-
-<span class="image fit"><img src="images/w10_Payment_GroceryStore.png" alt="Payment Scenario" /></span>
+<span class="image fit"><img src="images/w10_Onboarding_DataCollection.png" alt="Onboarding Data collection" /></span>
 
 <span class="image fit"><img src="images/w10_Onboarding_CharacterCreation.png" alt="Onboarding Character Creation" /></span>
 
-<span class="image fit"><img src="images/w10_Onboarding_DataCollection.png" alt="Onboarding Data collection" /></span>
-
+<span class="image fit"><img src="images/w10_Payment_GroceryStore.png" alt="Payment Scenario" /></span>
 
 
 <b>Feedback</b>
@@ -190,7 +188,21 @@ We opted to meet on Sunday with a more refined storyboard, picking our individua
 
 <span class="image fit"><img src="images/usertest.jpg" alt="User Testing" /></span>
 
-<p>We spent Thursday getting two think-alouds each. The think-alouds ended up being great ways to get immediate reactions to both of these prototypes. The results were quickly helpful and helped us build upon the scenarios we develop to present to the client. The end-of-week client presentation went well and the prototypes allowed them to give direct feedback on our direction.</p>
+<p>We spent Thursday conducting user tests, which were extremely valuable to us.
+
+We found that language was the most important attribute when user testing. Terms such as Accelerometer mean nothing to non-tech people - and it just confuses them.
+
+In fact, when choosing what data to share, one user ended up selecting items such as Camera and Location, two things which people are generally more hesitant to provide, only because those were the ones they understood.
+</p>
+<p>
+Even having the term ‘Accuracy’ isn’t consumer-centric enough. Users asked what ‘Accuracy’ meant and we needed to explain it to them. Going forward, we will change this term to something customers value - such as speed, or ease of use.
+
+People preferred the Weak - Medium - Strong scale when choosing what sensor data to share with the app. It reinforces their mental model they have during password creation. Having a fluctuating percentage was a lot more confusing.
+
+We also asked which data users feel least comfortable sharing. Amongst the five, 'Screen' and 'Camera' seem to be the most personal, and most sensitive.
+
+</p>
+
 
 <p>Next week we’ll start on to our second sprint, a little wiser and a little more prepared to jump in sooner and start prototyping.</p>
 
