--- a/blog.html
+++ b/blog.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Team Mastercard</title>
+		<title>Weekly Blog</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link rel="stylesheet" href="assets/css/main.css" />
