--- a/prototypes.html
+++ b/prototypes.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Team Mastercard: Week 1</title>
+		<title>Prototypes</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link rel="stylesheet" href="assets/css/main.css" />
