--- a/team.html
+++ b/team.html
@@ -5,7 +5,7 @@
 -->
 <html>
 	<head>
-		<title>Team Mastercard</title>
+		<title>About</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link rel="stylesheet" href="assets/css/main.css" />
