Fixing bugs found in test pass 1

--- a/index.html
+++ b/index.html
@@ -174,12 +174,22 @@
 
 
 							<header ><h2><b>Proof of Concept: A Face<br>Recognition Demo</b></h2></header>
-							<br><br>
-							<video width="100%" controls class="center-align-images" >
+							<br>
+							<p>We developed a proof of concept for a facial recognition authentication experience. This is a slow burn project replicating some of the features of Project Abacus’ demo in the studio that shows a certainty rating for a user in the camera. Here’s a demo video of it working on some of our teammates.</p>
+							<br>
+							<video width="100%" controls  >
 							  <source src="images/avatar_demo.mp4" type="video/mp4">
 							  <source src="images/avatar_demo.ogg" type="video/ogg">
 							  Your browser does not support HTML5 video.
 							</video>
+
+							<!-- <ul class="actions vertical align-center">
+								<li><a href="#first" class="button big wide smooth-scroll-middle">Design Prototypes</a></li>
+							</ul> -->
+							<br><br><br>
+							<a href="prototypes.html">Continue reading: Design Prototypes</a>
+							<br><br><br>
+							 
 
 							
 
@@ -221,12 +231,16 @@
 		<!-- Scripts -->
 			<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 			<script src="assets/js/navbar.js"></script>
-			<script src="assets/js/jquery.min.js"></script>s
+			<script src="assets/js/jquery.min.js"></script>
+			
 			<script src="assets/js/jquery.scrollex.min.js"></script>
 			<script src="assets/js/jquery.scrolly.min.js"></script>
+
 			<script src="assets/js/skel.min.js"></script>
 			<script src="assets/js/util.js"></script>
 			<script src="assets/js/main.js"></script>
+			
+			
 
 
 	</body>
