--- a/prototypes.html
+++ b/prototypes.html
@@ -56,7 +56,7 @@
 
 							<br><br>
 
-							<header><h2><b><a href="prototypes.html">Tackling design challenges</a></b></h2></header>
+							<header><h2><b>Tackling design challenges</b></h2></header>
 
 							<br>
 
