Fixing q2 content mismatch

--- a/prototypes.html
+++ b/prototypes.html
@@ -110,7 +110,7 @@
 								<br><br><br>
 
 								<header id="q2">
-								<h4><b>Q2: How do people respond to being asked to provide their personal data?</b></h4>
+								<h4><b>Q2: How do people feel about different types of data being collected?</b></h4>
 								<h4><b>A: Fear of detailed data being constantly tracked</b></h4>
 								</header>
 
