Adding week 12 to blog

--- a/blog.html
+++ b/blog.html
@@ -165,6 +165,20 @@
 						</div>
 					</section>
 
+					<!-- Twelve -->
+					<section class="spotlight style1 orient-left content-align-left image-position-center onscroll-image-fade-in" id="first">
+						<div class="content">
+							<h2>Weeknotes 12 - Sprint 2, Refinement</h2>
+							<p>Our goal for this Sprint was to iterate on our prototypes from the first Sprint in order to get better user feedback. We also wanted to improve the onboarding experience in our prototypes, and test language to get a sense of what makes users feel safe, or uncomfortable.</p>
+							<ul class="actions vertical">
+								<li><a href="week12.html" class="button">Read More</a></li>
+							</ul>
+						</div>
+						<div class="image">
+							<img src="images/test.jpg" alt="" />
+						</div>
+					</section>
+
 					
 
 				<!-- Footer -->
