fixing some minor bugs in the week12 post

--- a/week12.html
+++ b/week12.html
@@ -36,6 +36,10 @@
 
 <header><h4><b></b></h4></header>
 
+<b>Questions we wanted to answer with this prototype:</b>
+
+<br><br>
+
 <b>How do we demonstrate how Continuous Authentication works?</b>
 <ul style="list-style-type: none;">
 <li>How do people respond to being asked to provide their personal data?</li>
@@ -91,6 +95,7 @@
 <p>With the old Avatar prototype, we faced a lot of confusion while user testing since we didn't fully explain why users were providing data. So we focused on providing a narrative where the user reading the storyboard can see the value of providing personal data to make Continuous Authentication work. </p>
 
 <b>Questions we wanted to answer with this prototype:</b>
+<br><br>
 <b>How do we onboard users as seamlessly and delightfully as possible?</b>
 <ul style="list-style-type: none;">
 <li>How do we demonstrate how continuous authentication works?</li>
@@ -172,7 +177,7 @@ Two very interesting comments came out of our presentation to other capstone tea
 
 
 
-<p>Having spent almost 4 weeks on two different concepts, we decided to create an entirely new, refreshing, prototype for Sprint 3. Stay tuned! </p>
+<p>Having spent almost 4 weeks on two different concepts, we decided to create an entirely new, <i>refreshing</i>, prototype for Sprint 3. Stay tuned! </p>
 
 <!-- <div class="row" style="width: 100%;">
 	  <div class="" style="width:33%; text-align: center;">
